@@ -9583,5 +9583,10 @@
   "game:handbook-mealingredient-rice": "rice",
   "game:handbook-mealingredient-friedfood": "fried food",
   "game:handbook-mealingredient-yogurt": "yogurt",
-  "game:handbook-mealingredient-fruitcandy": "candied fruit"
+  "game:handbook-mealingredient-fruitcandy": "candied fruit",
+  
+
+  "game:item-handbooktitle-fruitpress": "Fruitpress notes",
+  "game:item-handbooktext-fruitpress": "You can only use the fruit press if it is at LEAST half-full. Anything less and the press will not squish any material."
+  
 }   
