@@ -1,0 +1,16 @@
+[
+  {
+    "op": "addmerge",
+    "path": "/attributes/handbook",
+    "value": {
+      "extraSections": [
+        {
+          "title": "game:item-handbooktitle-fruitpress",
+          "text": "game:item-handbooktext-fruitpress"
+        }
+      ]
+    },
+    "side": "server",
+    "file": "game:blocktypes/wood/fruitpress.json"
+  }
+]
