@@ -96,7 +96,7 @@ HANDBOOK THINGS:
 - Meal recipes generally adjusted to look better in the handbook - DONE!!!
 - Recipe ingredient slots now utilize typeName property - DONE!!!
 - Dried peat bowl text fixed - DONE!!!
-- Fruit press handbook entry states the minimum amount needed to work
+- Fruit press handbook entry states the minimum amount needed to work - DONE!!!
 - Salt crystals mention they can only be made with a cauldron - DONE!!!
 
 REBALANCING:
@@ -113,6 +113,8 @@ BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
 - Hardened resin fixed so it hardens properly
 - Peanut skins fixed so animals can eat them (egg shells fixed in ACA) - DONE!!!
+- Oven transforms reviewed for all items
+- SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
 
 NEW FOOD:
 - added meatloaf?
